// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GotenTextField snapshots type email 1`] = `
<div>
  <label
    className="label"
  >
    Email 
  </label>
  <input
    className="undefined"
    onChange={[Function]}
    type="email"
  />
  <br />
</div>
`;

exports[`GotenTextField snapshots type invalid 1`] = `
<div>
  <label
    className="label"
  >
    Invalid 
  </label>
  <input
    className="undefined"
    onChange={[Function]}
    type="invalid"
  />
  <br />
</div>
`;

exports[`GotenTextField snapshots type number 1`] = `
<div>
  <label
    className="label"
  >
    Number 
  </label>
  <input
    className="undefined"
    onChange={[Function]}
    type="number"
  />
  <br />
</div>
`;

exports[`GotenTextField snapshots type password 1`] = `
<div>
  <label
    className="label"
  >
    Password 
  </label>
  <input
    className="undefined"
    onChange={[Function]}
    type="password"
  />
  <br />
</div>
`;

exports[`GotenTextField snapshots type text 1`] = `
<div>
  <label
    className="label"
  >
    Text 
  </label>
  <input
    className="undefined"
    onChange={[Function]}
    type="text"
  />
  <br />
</div>
`;

exports[`GotenTextField snapshots type time 1`] = `
<div>
  <label
    className="label"
  >
    Time 
  </label>
  <input
    className="undefined"
    onChange={[Function]}
    type="time"
  />
  <br />
</div>
`;

exports[`GotenTextField snapshots type url 1`] = `
<div>
  <label
    className="label"
  >
    Url 
  </label>
  <input
    className="undefined"
    onChange={[Function]}
    type="url"
  />
  <br />
</div>
`;
